Fixed some small CheckBox layout issues (nowrap, vertical-align)

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/bench/DesktopBench.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/desktop/bench/DesktopBench.css
@@ -128,7 +128,7 @@
     }
 
     & > .cell-editor-popup > .check-box-field > .cell-editor-field > .check-box {
-      margin-top: 6px;
+      margin-top: 5px;
     }
   }
 }
