--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/checkbox/CheckBoxField.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/form/fields/checkbox/CheckBoxField.css
@@ -11,8 +11,9 @@
 @check-box-size: 18px;
 
 .check-box-field > .field {
-  padding: 5px 0 @borderless-field-padding-y 0;
+  padding: 6px 0 @borderless-field-padding-y 0;
   outline: none;
+  white-space: nowrap;
 
   & > .check-box,
   & > .label {
@@ -26,12 +27,12 @@
     cursor: default;
   }
 
+  /* only the label should be clickable, not the whole field */
   & > .label {
+    padding-top: 1px;
     padding-left: 7px;
-    /* only the label should be clickable, not the whole field */
     display: inline-block;
-    line-height: @check-box-size;
-    max-width: 100%;
+    max-width: calc(~'100%' - @check-box-size);
     #scout.overflow-ellipsis-nowrap();
   }
 
@@ -84,6 +85,6 @@
 
   &.cell-editor-field > .check-box {
     margin-left: @check-box-size;
-    margin-top: 1px;
+    margin-top: 0px;
   }
 }
